# compass

./: .gitmodules  CMakeLists.txt  Intersections.h  README.md  angles.h  at-most.h  clipper.h  eigen_2d_extensions.h  intersections.h  main.cpp  primitives.h  test.cpp  whiteboard-compass.h  whiteboard_compass.h
